# l5x-lint

./: .gitignore  .gitmodules  .todos.json  AGENTS.md  LICENSE  README.md  VERSION  _gen_test_data.py  pyproject.toml  requirements-dev.txt
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release-chocolatey.yml  release-github-release.yml  release-homebrew.yml  release-npm.yml  release-pyinstaller.yml  release-pypi.yml  release.yml
.github/workflows/release/: chocolatey.yml  github-release.yml  homebrew.yml  npm.yml  pyinstaller.yml  pypi.yml
docs/: architecture.md  clean-architecture-refactor.md  iec-61131-3-oss-analysis.md  initial-data-collection.md  l5x-lint-spec.md  parser-spec.md  railway-audit-plan.md  xml-validation-plan.md
installers/choco/: generate_icon.py  l5x-lint.nuspec
installers/choco/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
installers/npm/: cli.js  install.js  package.json
l5x_lint/: rll_grammar.py
src/: __main__.py
src/application/: _registry.py  analyze.py  config.py  filter.py  routine_router.py
src/domain/: __init__.py  diagnostics.py  dialect.py  errors.py  st_models.py  symbols.py
src/domain/checks/: __init__.py  _hints.py  _types.py  _walkers.py  opcodes.py  tag_refs.py
src/infrastructure/: _xsd.py  adapter.py  rung_parser.py  st_parser.py
src/infrastructure/xml_parsers/: _factory.py  base.py  v38.py
src/l5x_lint/: __main__.py
src/l5x_lint/application/: analyze.py  filter.py  routine_router.py
src/l5x_lint/checks/: __init__.py  _codes.py  _hints.py  _types.py  _walkers.py  e001_undefined_tag.py  e002_type_mismatch.py  e003_missing_aoi.py  e004_invalid_jsr.py  e005_invalid_member.py  e006_array_bounds.py  e007_duplicate_tag.py  e008_aoi_circular.py  e009_wrong_operand_count.py  e010_cross_scope.py  opcodes.py  tag_refs.py  w001_unused_tag.py  w002_afi_rung.py  w003_output_never_driven.py  w004_timer_pre.py  w005_shadowed_tag.py
src/l5x_lint/domain/: __init__.py  diagnostics.py  dialect.py  errors.py  models.py  rll_models.py  st_models.py
src/l5x_lint/infrastructure/: _xsd.py  adapter.py  rung_parser.py
src/l5x_lint/pipeline/: __init__.py  analyze.py  config.py  filter.py  routine_router.py  rung_parser.py  st_parser.py  symbols.py
src/l5x_lint/presentation/: _format.py  cli.py  mcp_server.py
src/l5x_lint/schemas/: l5x-v33.xsd  l5x-v36.xsd  l5x-v38.xsd
src/presentation/: _format.py  cli.py  mcp_server.py
tests/: README.md  conftest.py  helpers.py  test_data_inventory.py  test_integration.py
tests/application/: test_analyze.py  test_config.py  test_filter.py  test_routine_router.py
tests/benchmarks/: conftest.py  test_scaling.py
tests/checks/: test_e001_undefined_tag.py  test_e002_type_mismatch.py  test_e003_missing_aoi.py  test_e004_invalid_jsr.py  test_e005_invalid_member.py  test_e006_array_bounds.py  test_e007_duplicate_tag.py  test_e008_aoi_circular.py  test_e009_wrong_operand_count.py  test_e010_cross_scope.py  test_hints.py  test_w001_unused_tag.py  test_w002_afi_rung.py  test_w003_output_never_driven.py  test_w004_timer_pre.py  test_w005_shadowed_tag.py  test_walkers.py
tests/checks/cross/: test_codes.py  test_ec001_undefined_tag.py  test_ec002_type_mismatch.py  test_ec003_missing_aoi.py  test_ec004_invalid_subroutine.py  test_ec005_invalid_member.py  test_ec006_array_bounds.py  test_ec007_duplicate_tag.py  test_ec008_aoi_circular_dep.py  test_ec010_cross_scope_violation.py  test_ec011_reserved_name.py  test_ec012_array_init_count.py  test_ec013_duplicate_jmp_label.py  test_ec014_unresolved_constant.py  (+13 more)
tests/domain/: test_diagnostics.py  test_errors.py  test_models.py  test_rll_models.py  test_st_models.py  test_symbols.py
tests/infrastructure/: test_adapter.py  test_rung_parser.py  test_st_parser.py
tests/pipeline/: test_analyze.py  test_config.py  test_dialect.py  test_filter.py  test_routine_router.py  test_rung_parser.py  test_st_parser.py  test_symbols.py
tests/presentation/: test_cli.py  test_mcp_server.py
tests/unit/: test_integration.py
(+362 files in other folders)
