[project]
name = "l5x-lint"
version = "0.1.0"
description = "Semantic analyzer / linter for Rockwell L5X PLC programs"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.1",
    "returns>=0.27",
    "mcp>=1.0",
    "xmlschema>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["references*"]

[project.scripts]
l5x-lint = "presentation.cli:main"
l5x-lint-mcp = "presentation.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
mcp = ["mcp>=1.0"]

[tool.ruff]
exclude = ["references/", "schemas/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/infrastructure/st_parser.py" = ["E501"]
"src/infrastructure/rung_parser.py" = ["E501"]
"tests/**/*.py" = ["E501"]
"tests/data/benchmarks/generate.py" = ["E501"]

[tool.ruff.format]
line-ending = "auto"

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: scaling/performance benchmark tests (deselect with '-m not benchmark')",
]
