[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l5x-lint"
version = "0.0.0"  # stamped by CI from VERSION at release
description = "Semantic analyzer / linter for Rockwell L5X PLC programs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "John Price" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "lark>=1.1",
    "returns>=0.27",
    "mcp>=1.0",
    "xmlschema>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["references*"]

[project.urls]
Homepage = "https://github.com/JohnPrice/l5x-lint"
Repository = "https://github.com/JohnPrice/l5x-lint"
Changelog = "https://github.com/JohnPrice/l5x-lint/releases"

[project.scripts]
l5x-lint = "presentation.cli:main"
l5x-lint-mcp = "presentation.mcp_server:main"

[project.entry-points."pipx.run"]
l5x-lint = "presentation.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
mcp = ["mcp>=1.0"]

[tool.ruff]
exclude = ["references/", "schemas/", "installers/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/infrastructure/st_parser.py" = ["E501"]
"src/infrastructure/rung_parser.py" = ["E501"]
"tests/**/*.py" = ["E501"]
"tests/benchmarks/data/benchmarks/generate.py" = ["E501"]

[tool.ruff.format]
line-ending = "auto"

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/benchmarks"]
markers = [
    "benchmark: scaling/performance benchmark tests (deselect with '-m not benchmark')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
